fix hamburger menu ui on smaller device and added display block for btn see all

--- a/css/global.sass
+++ b/css/global.sass
@@ -250,6 +250,13 @@ a
             align-items: center
             margin-bottom: 80px
 
+        .section-bottom
+            display: none
+            margin-top: 50px
+            align-items: center
+            justify-content: center
+
+
         h2
             font-size: 3em
             font-weight: 300
