--- a/css/main.css
+++ b/css/main.css
@@ -256,6 +256,12 @@ a {
   align-items: center;
   margin-bottom: 80px;
 }
+.section-2 .container .section-bottom {
+  display: none;
+  margin-top: 50px;
+  align-items: center;
+  justify-content: center;
+}
 .section-2 .container h2 {
   font-size: 3em;
   font-weight: 300;
@@ -505,6 +511,9 @@ a {
   .section-2 .section-head .btn {
     display: none;
   }
+  .section-2 .section-bottom {
+    display: flex !important;
+  }
   .section-2 .gallery-row {
     display: block !important;
   }
@@ -573,6 +582,13 @@ a {
   .nav-top .container .nav-container .hamburger-menu {
     height: 19px;
     width: 35px;
+  }
+
+  .menu-click .top-line {
+    transform: rotate(45deg) translate(6px, 4px);
+  }
+  .menu-click .bot-line {
+    transform: rotate(-45deg) translate(7px, -5px);
   }
 
   .header h1 {
