--- a/css/queries.sass
+++ b/css/queries.sass
@@ -98,6 +98,9 @@
             .btn 
                 display: none
 
+        .section-bottom
+            display: flex !important
+
         
         .gallery-row 
             display: block !important
@@ -176,6 +179,13 @@
                 .hamburger-menu 
                     height: 19px
                     width: 35px
+
+    .menu-click
+        .top-line
+            transform: rotate(45deg) translate(6px, 4px)
+
+        .bot-line
+            transform: rotate(-45deg) translate(7px, -5px)
 
     .header
         h1 
